正誤表更新

--- a/index.html
+++ b/index.html
@@ -763,10 +763,24 @@
                         </td>
                     </tr>
                     <tr class="eratta">
-                        <td>第24章<br/>シーンアセットにスクリプトをアタッチ</td>
-                        <td colspan="3" style="padding-top: 3rem;">
-                            Unity5.2 から Unity5.3 への対応により、DefaultAsset を SceneAsset へと変更
+                        <td>第21章<br/>パーティクルを制御する</td>
+                        <td class="eratta-wrong">知らなけでばいけません</td>
+                        <td class="eratta-correct">知らなければいけません</td>
+                        <td class="eratta-diff">知らなけ
+                            <ins>で</ins>
+                            <del>れ</del>
+                            ばいけません
                         </td>
+                    </tr>
+                    <tr class="eratta">
+                        <td>第21章<br/>パーティクルを制御する</td>
+                        <td class="eratta-wrong">Uity</td>
+                        <td class="eratta-correct">Unity</td>
+                        <td class="eratta-diff">U
+                            <ins>n</ins>
+                            ity
+                        </td>
+                    </tr>
                     <tr class="eratta">
                         <td>第24章<br/>シーンアセットにスクリプトをアタッチ</td>
                         <td colspan="3" style="padding-top: 3rem;">
