--- a/change_log.html
+++ b/change_log.html
@@ -1,3 +1,5 @@
+2016/07/01 - Web版にてジェネリック型の「&lt;&gt;」が html タグと解釈され表示されたかった問題を修正<br/>
+2016/07/01 - 誤字脱字を修正<br/>
 2016/04/22 - Amazonで<a href="http://www.amazon.co.jp/dp/B01EM3T0EM">Kindle版</a>の販売を開始<br/>
 2016/04/03 - Web版を無償公開<br/>
 2016/04/03 - Unity5.3対応により「シーンアセットにスクリプトをアタッチ」の章を修正（DefaultAssetからSceneAssetへ変更）。<br/>
