--- a/index.html
+++ b/index.html
@@ -715,11 +715,27 @@
                     </tr>
                     <tr class="eratta">
                         <td>第2章<br/> 標準で使えるエディター拡張機能</td>
+                        <td class="eratta-wrong">からピッカー</td>
+                        <td class="eratta-correct">カラーピッカー</td>
+                        <td class="eratta-diff">
+                            <ins>カラー</ins>
+                            <del>から</del>
+                            ピッカー
+                        </td>
+                    </tr>
+                    <tr class="eratta">
+                        <td>第2章<br/> 標準で使えるエディター拡張機能</td>
                         <td class="eratta-wrong">コンポーネント郡</td>
                         <td class="eratta-correct">コンポーネント群</td>
                         <td class="eratta-diff">コンポーネント
                             <ins>群</ins>
                             <del>郡</del>
+                        </td>
+                    </tr>
+                    <tr class="eratta">
+                        <td>第2章<br/> 標準で使えるエディター拡張機能</td>
+                        <td colspan="3" style="padding-top: 3rem;">
+                            最新バージョンに合わせ、RenamedSerializedData から FormerlySerializedAs に変更
                         </td>
                     </tr>
                     <tr class="eratta">
@@ -751,7 +767,15 @@
                             にする必要はありません
                         </td>
                     </tr>
-
+                    <tr class="eratta">
+                        <td>第9章<br/>CustomEditor</td>
+                        <td class="eratta-wrong">アセットのの値</td>
+                        <td class="eratta-correct">アセットの値</td>
+                        <td class="eratta-diff">アセットの
+                            <del>の</del>
+                            値
+                        </td>
+                    </tr>
                     <tr class="eratta">
                         <td>第12章<br/>Undoについて</td>
                         <td class="eratta-wrong">プロパティーの変さらに対するUndo</td>
