--- a/index.html
+++ b/index.html
@@ -735,7 +735,7 @@
                     <tr class="eratta">
                         <td>第2章<br/> 標準で使えるエディター拡張機能</td>
                         <td colspan="3" style="padding-top: 3rem;">
-                            最新バージョンに合わせ、RenamedSerializedData から FormerlySerializedAs に変更
+                            最新バージョンに合わせ、RenamedSerializedData から FormerlySerializedAs に変更。それに合わせ<b>using UnityEngine.Serialization;</b>を追加
                         </td>
                     </tr>
                     <tr class="eratta">
@@ -794,6 +794,15 @@
                             <ins>で</ins>
                             <del>れ</del>
                             ばいけません
+                        </td>
+                    </tr>
+                    <tr class="eratta">
+                        <td>第21章<br/>パーティクルを制御する</td>
+                        <td class="eratta-wrong">ハードコート</td>
+                        <td class="eratta-correct">ハードコード</td>
+                        <td class="eratta-diff">ハードコー
+                            <ins>ド</ins>
+                            <del>ト</del>
                         </td>
                     </tr>
                     <tr class="eratta">
