--- a/index.html
+++ b/index.html
@@ -996,6 +996,10 @@
     ga('send', 'pageview');
 
 </script>
+<script src='https://cdn.slaask.com/chat.js'></script>
+<script>
+    _slaask.init('325b3481476848eef58f0cf67cd4f0f8');
+</script>
 </body>
 
 </html>
