--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <meta name="description" content="Web版無償公開中！Unityエディター拡張の入門書！"/>
+    <meta name="description" content="Unityエディター拡張の入門書！"/>
     <meta name="keywords" content="Unity,Unityエディター拡張,Unityエディタ拡張,エディタ拡張,Editor拡張,C88"/>
 
     <meta property="og:title" content="Unity エディター拡張入門"/>
-    <meta property="og:description" content="Web版無償公開中！Unityエディター拡張の入門書！"/>
+    <meta property="og:description" content="Unityエディター拡張の入門書！"/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="http://anchan828.github.io/editor-manual/"/>
     <meta property="og:image" content="https://anchan828.github.io/editor-manual/img/sns_image.png"/>
@@ -22,7 +22,7 @@
     <meta name="twitter:site" content="@kyusyukeigo">
     <meta name="twitter:creator" content="@kyusyukeigo">
     <meta name="twitter:title" content="Unity エディター拡張入門">
-    <meta name="twitter:description" content="Web版無償公開中！Unityエディター拡張の入門書！">
+    <meta name="twitter:description" content="Unityエディター拡張の入門書！">
     <meta name="twitter:image" content="https://anchan828.github.io/editor-manual/img/sns_image.png">
     <meta name="twitter:data1" content="安藤圭吾">
     <meta name="twitter:label1" content="AUTHOR">
@@ -135,9 +135,6 @@
                 <div class="intro-lead-in">Unityで効率的な開発をするために
                 </div>
                 <div class="intro-heading">エディター拡張入門</div>
-                <div class="" style="margin-bottom: 30px;font-size: large;font-weight: bold;"><a href="#buy"
-                                                                                                 class="page-scroll btn btn-xl col-md-8 center">Web版無償公開中！</a>
-                </div>
                 <div class="col-md-12 center">
                     <a href="#about" class="page-scroll btn btn-xl col-md-4 center" style="margin: 5px">本書について</a>
                     <a href="#buy" class="page-scroll btn btn-xl col-md-4 center" style="margin: 5px">購入する</a>
@@ -243,31 +240,21 @@
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading">購入</h2>
 
-                <h3 class="section-subheading text-muted"></h3>
+                <h3 class="section-subheading text-muted">注意: 本書は2017.1当時の内容です。現在の情報と異なる場合があります。ご注意ください。</h3>
             </div>
         </div>
         <div class="row text-center">
-            <div class="col-md-12 text-center" style="margin-bottom: 50px">
-                <a href="web" class="page-scroll btn btn-xl col-md-8 center">無償公開のWeb版へ移動する</a>
-            </div>
             <div class="col-md-offset-1 col-md-4">
                 <a href="https://kyusyukeigo.booth.pm/">
                     <img src="img/booth.png" width="100%" alt=""/>
                 </a>
             </div>
             <div class="col-md-7">
-                <p class="text-muted">電子書籍版の PDF と ePub を<a href="https://booth.pm">BOOTH</a>で販売しています。</p>
-                <a href="https://kyusyukeigo.booth.pm/items/128404" class="page-scroll btn btn-xl" target="_blank">PDF/ePub版の入ページへ移動する</a>
+                <p class="text-muted">電子書籍版の PDF を<a href="https://booth.pm">BOOTH</a>で販売しています。</p>
+                <a href="https://kyusyukeigo.booth.pm/items/128404" class="page-scroll btn btn-xl" target="_blank">PDF版の入ページへ移動する</a>
 
                 <div class="clearfix"></div>
-                <p class="text-muted col-md-6 center" style="margin-top: 10px">内容は、コミケ88
-                    の頒布物と同じものです。また、今後のアップデート（修正・補足など）も両方に反映されます。</p>
 
-            </div>
-            <div class="col-md-12">
-                <h3 class="">お願い</h3>
-
-                <p class="text-muted">誤字脱字や説明不足など何かありましたら、気軽に<a href="#u_contact">ご連絡</a>ください。早急に対応いたします。</p>
             </div>
         </div>
     </div>
