--- a/change_log.html
+++ b/change_log.html
@@ -1,4 +1,4 @@
-2019/09/26 - Web版の公開を終了<br/>
+2019/09/26 - 本書が古く、不適切な情報が増えてきたためWeb版の公開を終了<br/>
 2016/07/27 - 誤字脱字を修正<br/>
 2016/07/03 - 誤字脱字を修正<br/>
 2016/07/01 - Web版にてジェネリック型の「&lt;&gt;」が html タグと解釈され表示されたかった問題を修正<br/>
